--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import contactform from "../data/contactform.json";
 	<Form form={contactform} provider="netlify" honeypot={true} />
 </Layout>
 
-<style global>
+<style is:global>
 	body {
 		background: var(--color-bg);
 	}
